build: upgrade to JDK 25 (#175)
* build: upgrade to JDK 25 with OpenRewrite

* build: update Dockerfile to use Eclipse Temurin 25 for build and runtime

* chore: update Dependabot configuration to ignore Eclipse Temurin versions >= 26, < 29

* build: add lombok as annotation processor